--- a/HR.Leavemanagament.API/appsettings.json
+++ b/HR.Leavemanagament.API/appsettings.json
@@ -6,8 +6,7 @@
   "EmailSettings": {
     "ApiKey": "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",
     "FromName": "Leave Management System",
-    "FromAddress": "noreplay@leavemanagament.com",
-    "password": "Tunu@Msewe123Mama"
+    "FromAddress": "noreplay@leavemanagament.com"
   },
   "Logging": {
     "LogLevel": {
