--- a/HR.Leavemanagament.API/appsettings.json
+++ b/HR.Leavemanagament.API/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "EmailSettings": {
-    "ApiKey": "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",
+    "ApiKey": "API KEY",
     "FromName": "Leave Management System",
     "FromAddress": "noreplay@leavemanagament.com"
   },
