--- a/HR.Leavemanagament.Application.UnitTests/HR.Leavemanagament.Application.UnitTests.csproj
+++ b/HR.Leavemanagament.Application.UnitTests/HR.Leavemanagament.Application.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +20,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR.Leavemanagament.Application\HR.Leavemanagament.Application.csproj" />
+    <ProjectReference Include="..\HR.Leavemanagament.Domain\HR.Leavemanagament.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="LeaveRequests\Commands\" />
   </ItemGroup>
 
 </Project>
