--- a/HR.Leavemanagament.API/appsettings.json
+++ b/HR.Leavemanagament.API/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "EmailSettings": {
-    "ApiKey": "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",
+    "ApiKey": "api key",
     "FromName": "Leave Management System",
     "FromAddress": "noreplay@leavemanagament.com"
   },
