--- a/HR.Leavemanagament.API/appsettings.json
+++ b/HR.Leavemanagament.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "LeavemanagamentConnectionString": "Server=(localdb)\\mssqllocaldb;Database=hr_leavemanagament_db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LeavemanagamentConnectionString": "Server=(localdb)\\mssqllocaldb;Database=hr_leavemanagament_db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LeaveManagamentIdentityConnectionString": "Server=(localdb)\\mssqllocaldb;Database=hr_leavemanagament_Identity_db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "EmailSettings": {
@@ -15,5 +16,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "32C8935BBC8D43978815A788CB2241F5",
+    "Issuer": "HRLeavemanagament",
+    "Audience": "HRLeavemanagamentUser",
+    "DurationInMinutes": 60
+  }
 }
