--- a/HR.Leavemanagament.MVC/HR.Leavemanagament.MVC.csproj
+++ b/HR.Leavemanagament.MVC/HR.Leavemanagament.MVC.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="LocalStorage" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR.Leavemanagament.Application\HR.Leavemanagament.Application.csproj" />
   </ItemGroup>
 
 </Project>
